<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    app:cardBackgroundColor="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/cv_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/cv_text_additional_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cv_text_listeners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>