<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.InfoActivity"
    tools:showIn="@layout/activity_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cs_text_additional_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/cs_text_listeners"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:visibility="gone"
            tools:targetApi="o" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>