<resources>
    <string name="app_name">LastFmMvvm</string>
    <string name="tab_text_1">Albums</string>
    <string name="tab_text_2">Artists</string>
    <string name="tab_text_3">Songs</string>
    <string name="search_title">Search LastFM</string>
    <string name="headphone">🎧</string>
    <string name="microphone">🎙️</string>
    <string name="empty_search">Type in the search box above to begin</string>
</resources>